///////////////////////////////////////////////////////////
// MIELE SYSTEM – MVP DBML
// Only custom tables. Library tables (Django auth/contenttypes,
// SimpleJWT blacklist, django-otp, Django Admin/Sessions) are
// referenced but NOT defined here.
///////////////////////////////////////////////////////////

///////////////////////////////////////////////////////////
// ENUMS
///////////////////////////////////////////////////////////
Enum user_approval_status {
  pending
  approved
  declined
}

Enum client_status {
  pending
  active
  suspended
  archived
}

Enum tax_regime {
  LucroReal
  LucroPresumido
}

Enum perdcomp_status {
  pending
  active
  archived
}

Enum request_status {
  pending
  approved
  declined
}

Enum approval_subject {
  user
  client
  perdcomp
}

Enum approval_action {
  user_activate
  user_decline
  client_sensitive_update
  client_delete
  perdcomp_sensitive_update
  perdcomp_delete
}

Enum file_owner {
  client
  perdcomp
}

Enum file_type {
  document
  image
  pdf
  excel
  generic
}


///////////////////////////////////////////////////////////
// TABLE: identity_user (Custom User)
// AUTH_USER_MODEL="identity.User"
///////////////////////////////////////////////////////////
Table identity_user {
  id bigserial [pk]
  password varchar(128) [not null]
  last_login timestamptz
  is_superuser boolean [not null, default: false]
  username varchar(150) [not null, unique]
  first_name varchar(150) [not null, default: '']
  last_name varchar(150) [not null, default: '']
  email varchar(254) [not null, unique]
  is_staff boolean [not null, default: false]
  is_active boolean [not null, default: true]
  date_joined timestamptz [not null, default: `now()`]

  // MVP extensions
  approval_status user_approval_status [not null, default: 'pending']
  approval_decided_at timestamptz
  suspended_at timestamptz
  suspended_by_id bigint // ref: > identity_user.id (optional)
  suspension_reason text
  public_id uuid [default: `gen_random_uuid()`]
  deleted_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Custom User (AUTH_USER_MODEL="identity.User").'

  Indexes {
    (email) [unique]
    (username) [unique]
    (is_active)
    (date_joined)
    (deleted_at)
  }

}

///////////////////////////////////////////////////////////
// TABLE: clients
///////////////////////////////////////////////////////////
Table clients {
  id bigserial [pk]
  public_id uuid [not null, default: `gen_random_uuid()`]

  // Identification
  razao_social text [not null]
  nome_fantasia text
  cnpj varchar(14) [not null] // digits only
  inscricao_estadual varchar(32)
  inscricao_municipal varchar(32)
  tipo_de_empresa text
  recuperacao_judicial boolean [not null, default: false]

  // Contacts
  telefone_comercial varchar(32)
  email_comercial varchar(254)
  website text
  telefone_contato varchar(32)
  email_contato varchar(254)
  responsavel_financeiro text
  contador_responsavel text

  // Multiple attributes (arrays)
  quadro_societario text[]
  cargos_socios text[]
  cnae text[]
  atividades text[]
  rg_cpf_socios text[]

  // Regime / documents
  regime_tributacao tax_regime
  contrato_social text
  ultima_alt_contratual timestamptz
  certificado_digital text

  // State and authorship
  status client_status [not null, default: 'pending']
  colaborador_id bigint [ref: > identity_user.id]
  created_by_id bigint [not null, ref: > identity_user.id]
  updated_by_id bigint [ref: > identity_user.id]

  // Timestamps / soft delete
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'Make CNPJ unique among active records via partial UNIQUE (WHERE deleted_at IS NULL) in SQL migration.'

  Indexes {
    (public_id) [unique]
    (cnpj)
    (status)
    (created_at)
    (deleted_at)
    (colaborador_id)
    (created_by_id)
  }

}

///////////////////////////////////////////////////////////
// TABLE: client_address
// 1:1 – Single address per client in MVP
///////////////////////////////////////////////////////////
Table client_address {
  id bigserial [pk]
  client_id bigint [not null, ref: > clients.id] // on delete: cascade

  logradouro text [not null]
  numero varchar(16)
  complemento text
  bairro text
  municipio text
  uf varchar(2)
  cep varchar(8)

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'No branch concept in MVP; 1 address per client.'

  Indexes {
    (client_id) [unique] // ensures 1:1
    (cep)
    (deleted_at)
  }

}

///////////////////////////////////////////////////////////
// TABLE: perdcomps
///////////////////////////////////////////////////////////
Table perdcomps {
  id bigserial [pk]
  public_id uuid [not null, default: `gen_random_uuid()`]

  // Links
  client_id bigint [not null, ref: > clients.id] // on delete: cascade
  colaborador_id bigint [not null, ref: > identity_user.id]

  // Identification
  cnpj varchar(14) [not null] // normalized
  numero varchar(64)
  numero_perdcomp varchar(64)
  processo_protocolo text

  // Dates
  data_transmissao date
  data_vencimento date
  competencia varchar(7) // YYYY-MM
  data_competencia date

  // Tax and values
  tributo_pedido text
  valor_pedido numeric(15,2)
  valor_compensado numeric(15,2)
  valor_recebido numeric(15,2)
  valor_saldo numeric(15,2)
  valor_selic numeric(15,2)

  // State and audit
  status perdcomp_status [not null, default: 'pending']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'Make (client_id, cnpj, competencia) unique among active records via partial UNIQUE (WHERE deleted_at IS NULL) in SQL migration.'

  Indexes {
    (public_id) [unique]
    (client_id)
    (colaborador_id)
    (cnpj)
    (competencia)
    (status, created_at)
    (created_at)
    (deleted_at)
  }

}

///////////////////////////////////////////////////////////
// TABLE: app_notes
// Generic notes via ContentTypes
///////////////////////////////////////////////////////////
Table app_notes {
  id bigserial [pk]
  public_id uuid [not null, default: `gen_random_uuid()`]

  content_type_id int [not null] // ref: > django_content_type.id (library)
  object_id bigint [not null] // target object id (clients.id, perdcomps.id, ...)

  author_id bigint [not null, ref: > identity_user.id]
  content text [not null]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'Generic notes via ContentTypes.'

  Indexes {
    (public_id) [unique]
    (content_type_id, object_id)
    (author_id)
    (created_at)
    (deleted_at)
  }

}

///////////////////////////////////////////////////////////
// TABLE: app_files
// Generic files with type and owner
///////////////////////////////////////////////////////////
Table app_files {
  id bigserial [pk]
  public_id uuid [not null, default: `gen_random_uuid()`]

  content_type_id int [not null] // ref: > django_content_type.id
  object_id bigint [not null] // target object id

  owner file_owner [not null] // helps in validation and indexes
  file_type file_type [not null, default: 'generic'] // type of file based on content

  uploaded_by_id bigint [not null, ref: > identity_user.id]
  filename varchar(255) [not null]
  content_type varchar(150) [not null]
  size_bytes bigint [not null]
  checksum_sha256 varchar(64) [not null]
  drive_file_id varchar(255) [not null] // Google Drive File ID
  storage_path text // Deprecated - kept for migration compatibility

  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'Files stored in Google Drive via OAuth 2.0.'

  Indexes {
    (public_id) [unique]
    (content_type_id, object_id)
    (owner, kind)
    (uploaded_by_id)
    (checksum_sha256)
    (created_at)
    (deleted_at)
  }

}

///////////////////////////////////////////////////////////
// TABLE: app_approval_requests
// Generic approval requests for user/client/perdcomp
///////////////////////////////////////////////////////////
Table app_approval_requests {
  id bigserial [pk]
  public_id uuid [not null, default: `gen_random_uuid()`]

  subject approval_subject [not null] // user|client|perdcomp
  content_type_id int [not null] // ref: > django_content_type.id
  object_id bigint [not null] // target id: identity_user.id/clients.id/perdcomps.id

  action approval_action [not null]
  status request_status [not null, default: 'pending']

  requested_by_id bigint [not null, ref: > identity_user.id]
  approved_by_id bigint [ref: > identity_user.id]
  reason text
  payload_diff jsonb
  correlation_id uuid [not null, default: `gen_random_uuid()`]

  created_at timestamptz [not null, default: `now()`]
  decided_at timestamptz

  Note: 'Generic approval requests for user/client/perdcomp.'

  Indexes {
    (public_id) [unique]
    (subject, status, created_at)
    (content_type_id, object_id)
    (requested_by_id)
    (approved_by_id)
    (correlation_id) [unique]
  }

}

///////////////////////////////////////////////////////////
// TABLE: audit_log
// Immutable by policy; corrections are new records
///////////////////////////////////////////////////////////
Table audit_log {
  id bigserial [pk]
  public_id uuid [not null, default: `gen_random_uuid()`]

  actor_id bigint [ref: > identity_user.id]
  action varchar(64) // e.g.: 'client.update', 'perdcomp.create', 'user.approve'

  content_type_id int [not null] // ref: > django_content_type.id
  object_id bigint [not null] // target id

  payload_diff jsonb
  reason text
  correlation_id uuid [not null, default: `gen_random_uuid()`]

  ip varchar(45) // IPv4/IPv6
  user_agent text

  created_at timestamptz [not null, default: `now()`]

  Note: 'Immutable by policy; corrections are new records.'

  Indexes {
    (public_id) [unique]
    (actor_id)
    (content_type_id, object_id)
    (created_at)
    (correlation_id)
  }

}

///////////////////////////////////////////////////////////
// OPTIONAL TABLES (MVP+1)
///////////////////////////////////////////////////////////

Table outbox_email {
  id bigserial [pk]
  to_email varchar(254) [not null]
  subject text
  body text
  status varchar(32) // queued, sent, failed
  attempts int [not null, default: 0]
  last_error text
  scheduled_at timestamptz
  sent_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table cnpj_check {
  id bigserial [pk]
  client_id bigint [ref: > clients.id]
  cnpj varchar(14)
  result_json jsonb
  status varchar(32) // ok, not_found, error
  checked_at timestamptz [not null, default: `now()`]

  Note: 'Store results of CNPJ checks from external services.'
}
